@startuml

title __UTENTE's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace model.utente {
      interface com.unisa.cinehub.model.utente.MiPiaceRepository {
          {abstract} + getNumMiPiace()
          {abstract} + getNumNonMiPiace()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.utente {
      class com.unisa.cinehub.model.utente.MiPiaceService {
          {static} - logger : Logger
          + MiPiaceService()
          + findMiPiaceById()
          + getNumeroMiPiaceOfRecensione()
          + getNumeroNonMiPiaceOfRecensione()
          + handleMiPiace()
          - aggiungiMiPiace()
          - modificaMiPiace()
          - togliMiPiace()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.utente {
      interface com.unisa.cinehub.model.utente.RecensoreRepository {
          {abstract} + findNotBanned()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.utente {
      class com.unisa.cinehub.model.utente.RecensoreService {
          + RecensoreService()
          + finAllNotBanned()
          + findAll()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.utente {
      interface com.unisa.cinehub.model.utente.SegnalazioneRepository {
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.utente {
      class com.unisa.cinehub.model.utente.SegnalazioneService {
          {static} - logger : Logger
          + SegnalazioneService()
          + addSegnalazione()
          + puoSegnalare()
          + retrieveAll()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.utente {
      interface com.unisa.cinehub.model.utente.UtenteRepository {
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.utente {
      class com.unisa.cinehub.model.utente.UtenteService {
          + UtenteService()
          + bannaRecensore()
          + createVerificationToken()
          + deleteUtente()
          + findByEmail()
          + findUserDetailsByEmail()
          + getUtenteByVerificationToken()
          + getVerificationToken()
          + saveRegisteredUser()
          + signup()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.utente {
      interface com.unisa.cinehub.model.utente.VerificationTokenRepository {
          {abstract} + findByToken()
          {abstract} + findByUtente()
      }
    }
  }
  

  com.unisa.cinehub.model.utente.MiPiaceService o-- com.unisa.cinehub.model.utente.MiPiaceRepository : miPiaceRepository
  com.unisa.cinehub.model.utente.MiPiaceService o-- com.unisa.cinehub.model.recensione.RecensioneRepository : recensioneRepository
  com.unisa.cinehub.model.utente.MiPiaceService o-- com.unisa.cinehub.model.utente.RecensoreRepository : recensoreRepository
  com.unisa.cinehub.model.utente.RecensoreService o-- com.unisa.cinehub.model.utente.RecensoreRepository : recensoreRepository
  com.unisa.cinehub.model.utente.SegnalazioneService o-- com.unisa.cinehub.model.recensione.RecensioneRepository : recensioneRepository
  com.unisa.cinehub.model.utente.SegnalazioneService o-- com.unisa.cinehub.model.utente.RecensoreRepository : recensoreRepository
  com.unisa.cinehub.model.utente.SegnalazioneService o-- com.unisa.cinehub.model.utente.SegnalazioneRepository : segnalazioneRepository
  com.unisa.cinehub.model.utente.UtenteService o-- com.unisa.cinehub.model.recensione.RecensioneRepository : recensioneRepository
  com.unisa.cinehub.model.utente.UtenteService o-- com.unisa.cinehub.model.utente.UtenteRepository : utenteRepository
  com.unisa.cinehub.model.utente.UtenteService o-- com.unisa.cinehub.model.utente.VerificationTokenRepository : verificationTokenRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
